removed deprecated methods